added a video, a title and added a image above the video

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="presentation">
+        <video autoplay muted loop>
+            <source src="video/twingo.mp4" type="video/mp4" />
+        </video>
+        <div class="nav-bar"></div>
+        <div class="title">
+            <p>The Twingo<p>
+        </div>
+    </div>
+
 </body>
 </html>
