added navigation bar and some glass effect

--- a/index.html
+++ b/index.html
@@ -7,11 +7,21 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="nav-bar">
+        <button>
+            Header logo
+        </button>
+        <div class="buttons">
+            <button>About me</button>
+            <button>Other Projects</button>
+        </div>
+    </div>
     <div class="presentation">
+        
         <video autoplay muted loop>
             <source src="video/twingo.mp4" type="video/mp4" />
         </video>
-        <div class="nav-bar"></div>
+        
         <div class="title">
             <p>The Twingo<p>
         </div>
