modified colors for dark to light themes

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="text">
             <h1>AFFORDABILITY</h1>
             <p>
-                The first generation Twingo was sold in France for FF 55,000. Everything in the Twingo was designed with cost in mind. A good example of Renault's attempts to reduce costs is the radio antenna housed on the side mirror. Why is it there? Because it saves on the length of the antenna cable. This "design-to-cost" strategy resulted in a lot of small unique quirks that made the Twingo like no other.
+                The first generation Twingo was sold in France for FF 55,000. A good example of Renault's attempts to reduce costs is the radio antenna housed on the side mirror. Why is it there? Because it saves on the length of the antenna cable..
         </div>
         <div class="image">
             <img src="https://twingo.guide/assets/images/image34.jpg?v=bd5002c5">
